# tree-sitter-wasi-web

./: Cargo.toml  Makefile  README.md  index.html
.github/workflows/: build-and-deploy.yml
assets/: index-2QA_B3DU.js  index-BevpuHIO.js  index-BfHsqO_V.js  index-DZeqNCZM.js  index-DmTrs8mK.js  index-bOfMiM6K.js  tree_sitter_wasi_web.core2-0F3oBM6d.wasm  tree_sitter_wasi_web.core2-B-mYXKft.wasm
src/: bindings.rs  lib.rs
src/shared/: ast.rs  mod.rs  parser.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: index.js
wit/: world.wit
